# ctrlrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bash_integration.sh  fish_integration.fish  install.sh  uninstall.sh  zsh_integration.sh
scripts/mac/: bash_integration.sh  zsh_integration.sh
src/: app.rs  config.rs  history.rs  lib.rs  main.rs  shell.rs
src/ui/: mod.rs  ui.rs
