[package]
name = "ctrlrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Enhanced Ctrl-R for shell history with n-dimensional search"
license = "MIT"
repository = "https://github.com/yourusername/ctrlrs"
readme = "README.md"
keywords = ["cli", "shell", "history", "search", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
regex = "1.9.5"
anyhow = "1.0.75"
thiserror = "1.0.48"
log = "0.4.20"
env_logger = "0.10.0"
tempfile = "3.8.0"
textwrap = "0.16.0"

[dev-dependencies]
mockall = "0.11.4"
assert_cmd = "2.0.12"
predicates = "3.0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
